--- a/prijavaKorisnika.html
+++ b/prijavaKorisnika.html
@@ -122,6 +122,7 @@
             width: 100%;
             padding: 6px 12px;
             font-size: 14px;
+            width: 560px
             border: 1px solid #ccc;
             border-radius: 5px;
         }
