--- a/prijavaKorisnika.html
+++ b/prijavaKorisnika.html
@@ -123,8 +123,8 @@
         .form-group input {
             width: 100%;
             padding: 6px 12px;
+            width: 560px;
             font-size: 14px;
-            width: 560px
             border: 1px solid #ccc;
             border-radius: 5px;
         }
@@ -159,7 +159,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 20%;
+            width: 25%;
         }
 
         .submit-btn:hover {
