--- a/prijavaKorisnika.html
+++ b/prijavaKorisnika.html
@@ -295,7 +295,7 @@
             <p>Prijavite se i iskoristite sve pogodnosti koje vam pruža moj.Centrotrans.</p>
             <div class="social-login">
                 <button class="social-button google"><img src="/images/googleicon.svg" alt="Google Logo">Prijava putem Google računa</button>
-                <button class="social-button facebook"><img src="/images/fejs2icon.svg" alt="Facebook Logo">Prijava putem Facebook računa</button>        
+                <button class="social-button facebook"><img src="/images/icon_facebook.svg" alt="Facebook Logo" width="16px" height="16px">Prijava putem Facebook računa</button>        
             </div>
             <form>
                 <div class="form-group">
