--- a/prijavaKorisnika.html
+++ b/prijavaKorisnika.html
@@ -292,8 +292,8 @@
             <h1>Prijava korisnika</h1>
             <p>Prijavite se i iskoristite sve pogodnosti koje vam pruža moj.Centrotrans.</p>
             <div class="social-login">
-                <button class="social-button google"><img src="/images/googleicon.svg" alt="Google Logo">Prijava putem Google računa</button>
-                <button class="social-button facebook"><img src="/images/fejs2icon.svg" alt="Facebook Logo">Prijava putem Facebook računa</button>        
+                <button class="social-button google"><img src="/moj-Centrotrans-Projekat/images/googleicon.svg" alt="Google Logo">Prijava putem Google računa</button>
+                <button class="social-button facebook"><img src="/moj-Centrotrans-Projekat/images/fejs2icon.svg" alt="Facebook Logo">Prijava putem Facebook računa</button>        
             </div>
             <form>
                 <div class="form-group">
