--- a/danVozaca.html
+++ b/danVozaca.html
@@ -185,7 +185,7 @@
         <p class="date">15. januar 2025.</p>
         <div class="content">
           <p class="prvaKlasa">Ovaj poseban dan je prilika da se oda priznanje svim vozačima i automehaničarima koji svojim radom osiguravaju svakodnevno funkcionisanje javnog prijevoza.</p>
-          <img src="/images/15januar.jpg" alt="ljudi ispred autobusa Centrotransa" width="850px" height="422px">
+          <img src="/moj-Centrotrans-Projekat/images/15januar.jpg" alt="ljudi ispred autobusa Centrotransa" width="850px" height="422px">
           <p>Danas smo obilježili Međunarodni dan vozača i automehaničara, 15. januar, nastavljajući dugogodišnju tradiciju koja traje još od samih početaka naše kompanije. Ovaj dan, koji se u svijetu obilježava od 1960. godine, mi smo počeli slaviti nekoliko godina nakon toga, a prilika je da oda priznanje svim vozačima i automehaničarima koji svojim predanim radom omogućavaju nesmetano funkcionisanje javnog prijevoza.</p>
           <p>Svečanost smo organizovali u saradnji sa Udruženjem vozača i automehaničara, a posebno smo se posvetili onima čiji doprinos i posvećenost prevazilaze očekivanja i čine razliku u svakodnevnom radu.</p>
           <p><b>Dr. sc. Safudin Čengić</b>, predsjednik uprave Centrotransa, istakao je značaj ove profesije: „Naši vozači i automehaničari nisu samo oslonac naše kompanije, već i ključni činilac u životima naših putnika. Njihova posvećenost sigurnosti, profesionalizam i svakodnevni napori su temelj na kojem gradimo povjerenje sa korisnicima naših usluga.“</p>
