--- a/djedMrazUCentrotransu.html
+++ b/djedMrazUCentrotransu.html
@@ -185,7 +185,7 @@
         <p class="date">28. decembar 2024.</p>
         <div class="content">
           <p class="prvaKlasa">Tradicionalna podjela paketića za djecu članova Sindikata Centrotransa i ove godine donijela je osmijehe i veselje u našu kompaniju.</p>
-          <img src="/images/28dec.jpg" alt="Djeca ispred autobusa Centrotransa" width="850px" height="422px">
+          <img src="/moj-Centrotrans-Projekat/images/28dec.jpg" alt="Djeca ispred autobusa Centrotransa" width="850px" height="422px">
           <p>Najmlađi su imali priliku družiti se s Djeda Mrazom, koji je, psssst, nemojte nikome reći, jedan od naših kolega. Posebno iznenađenje bila je vožnja praznično ukrašenim autobusom, kojim su se, osim djece, imali priliku da se voze i njhovi roditelji. Time što se tradicionalna podjela paketića organizuje u krugu Centrotransa, djeca imaju priliku iz prve ruke vidjeti gdje rade njihovi roditelji. Istovremeno, ovo je prilika da se i radne kolege malo opuste, a njihva djeca druže.</p>
           <p><b>Mahira Kabul Merdžanić</b>, sindikalna povjerenica zadužena za organizaciju paketića, istakla je:
             <br>
