--- a/radostMalisana.html
+++ b/radostMalisana.html
@@ -184,7 +184,7 @@
         <p class="date">27. decembar 2024.</p>
         <div class="content">
           <p class="prvaKlasa">Sa svojim prepoznatljivim oldtimer autobusom i Djed Mrazom, Centrotrans je obradovao djecu širom grada dijeljenjem paketića, stvarajući pravu prazničnu čaroliju.</p>
-          <img src="/images/27dec.jpg" alt="djeca" width="850px" height="422px">
+          <img src="/moj-Centrotrans-Projekat/images/27dec.jpg" alt="djeca" width="850px" height="422px">
           <p>Kompanija Centrotrans je jučer, u okviru novogodišnjih prazničnih aktivnosti, priredila nezaboravno iznenađenje za mališane u Sarajevu. Sa svojim prepoznatljivim oldtimer autobusom i Djed Mrazom, Centrotrans je obradovao djecu širom grada dijeljenjem paketića, stvarajući pravu prazničnu čaroliju. Ovaj događaj obogatio je novogodišnju turističku ponudu Sarajeva, donoseći radost kako djeci, tako i odraslima.</p>
           <p>Pored toga, Centrotrans je danas posjetio i Udruženje "Budi mi drug" iz Ilijaša, koje okuplja djecu i omladinu sa različitim vrstama invaliditeta. Ekipa Centrotransa sa Djed Mrazom bila je dočekana sa pjesmom i veseljem, a susret se ubrzo pretvorio u zabavu i ples. Ova akcija, koja je okupila djecu, roditelje i članove Udruženja, bila je ispunjena pozitivnom energijom i oduševljenjem svih prisutnih.</p>
           <p>Centrotrans, sa svojom dugogodišnjom tradicijom, već je prepoznat kao društveno odgovorna kompanija koja se aktivno uključuje u inicijative koje pomažu onima kojima je najpotrebnije. Ovaj događaj još jednom je pokazao posvećenost Centrotransa stvaranju ljepših trenutaka za djecu i omladinu, a posebno za djecu i mlade sa invaliditetom.</p>
