--- a/tradicionalnoDruzenje.html
+++ b/tradicionalnoDruzenje.html
@@ -184,7 +184,7 @@
         <p class="date">31. decembar 2024.</p>
         <div class="content">
           <p class="prvaKlasa">Opraštamo se od 2024. godine, a pozdravljamo 2025.</p>
-          <img src="/images/31dec.jpg" alt="druznje" width="850px" height="422px">
+          <img src="/moj-Centrotrans-Projekat/images/31dec.jpg" alt="druznje" width="850px" height="422px">
           <p>Danas smo u toplom i prijateljskom okruženju naše kantine obilježili kraj 2024. godine kroz tradicionalno novogodišnje druženje. To je bila još jedna prilika da se podsjetimo svih uspjeha, izazova i trenutaka zajedništva koji su obilježili 2024. godinu.</p>
             <p>S posebnim poštovanjem i zahvalnošću prisjetili smo se svih naših kolega koji svakodnevno, časno i predano, daju svoj doprinos prijevozu putnika i radu kompanije – za volanom autobusa, u maloprodajnim objektima, na autobuskim stanicama i u turističkim agencijama. Vaša predanost i trud su temelj našeg uspjeha i razlog zašto smo ponosni na ime Centrotrans.</p>
             <p>Prisutnima se obratio predsjednik uprave, dr. sc. Safudin Čengić, koji je, navodeći da se već 15 put obraća kolektivu tokom novogodišnjeg druženja, istakao važnost zajedničkog rada i podrške unutar naše kompanije. Posebno je naglasio da su rezultati 2024. godine iznad očekivanja, te da se nada da će 2025. donijeti još mnoge uspjehe.</p>
