--- a/prijavaKorisnika.html
+++ b/prijavaKorisnika.html
@@ -304,7 +304,7 @@
                     <label for="password">Korisnička šifra:*</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="submit-btn"><img src="/images/icons8-user-30.png" alt="" width="20px" height="20px"> Prijavi me</button>
+                <button type="submit" class="submit-btn"><img src="/moj-Centrotrans-Projekat/images/icons8-user-30.png" alt="" width="20px" height="20px"> Prijavi me</button>
                 <a href="#">Zaboravili ste korisničku šifru?</a>
             </form>
         </div>
