--- a/kupuj.html
+++ b/kupuj.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Destinacije</title>
+    <title>Kupi i putuj</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="images/logoTab-removebg-preview.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,7 +69,7 @@
         }
 
         .drugaKlasa{
-            width: 1280px;
+            width: 1200px;
         }
 
         p {
