--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="hero">
         <div class="search-overlay">
             <!-- pozadina  -->
-            <img src="images/autobusPočetna.jpg" alt="Ne učitava se" width="1600px" height="900px" >
+            <img src="images/autobusPočetna.jpg" alt="Ne učitava se" width="100%" height="900px" >
         </div>
     </section>
     <!-- ovdje kreće dio za pretragu  -->
